@@ -1,4 +1,8 @@
- /* $Id: ChangeLog,v 1.823 2000-03-20 20:38:42 sandervl Exp $ */
+ /* $Id: ChangeLog,v 1.824 2000-03-21 00:29:25 davidr Exp $ */
+
+ 2000-03-20: David Raison <djr@lemur.co.uk>
+ 	- OLE32: Ported OleQueryCreateFromData, OleCreateFromData from
+ 	         wine/corel sources.
 
  2000-03-20: Sander van Leeuwen <sandervl@xs4all.nl>
 	- WSOCK32: Fixed relay bug in WSAAsyncSelect (delete relay slot 
